[gd_scene load_steps=4 format=3 uid="uid://enemy123456"]

[ext_resource type="Script" path="res://Enemy.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 20.0

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 0.2, 0.2, 1, 0.8, 0, 0, 1)

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(0, -20, -15, 0, -15, 10, 0, 20, 15, 10, 15, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]